crates/plotnik-lib/tests/02-parser/recovery_validation/capture_name_pascal_case.txt
(a) @Name
==== diagnostics ====
error: capture names must be snake_case
 --> query.ptk:1:5
  |
1 | (a) @Name
  |     ^^^^^
  |
help: use `@name`
  |
1 - (a) @Name
1 + (a) @name
  |
help: captures become fields in the output
